refactor XmlProcessorService and SimilarityResource and similarityResourceService, esp. for POST method, create tests