@@ -8,10 +8,19 @@ import jakarta.ws.rs.core.NewCookie;
 import jakarta.ws.rs.core.Response;
 import org.acme.semsim.dto.ApiResponse;
 import org.acme.semsim.service.SimilarityProcessingService;
+import org.acme.semsim.service.XmlProcessorService;
 import org.jboss.logging.Logger;
+import org.w3c.dom.Document;
+import org.w3c.dom.NodeList;
+import org.xml.sax.SAXException;
 
+import javax.xml.parsers.ParserConfigurationException;
+import javax.xml.xpath.XPathExpressionException;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.io.UnsupportedEncodingException;
+
+import static org.acme.semsim.service.XmlProcessorService.*;
 
 /**
  * REST API endpoint for similarity-related operations.
@@ -20,14 +29,13 @@ import java.io.UnsupportedEncodingException;
 public class SimilarityResource {
 
 	private static final Logger LOG = Logger.getLogger(SimilarityResource.class);
-	private static final String SESSION_COOKIE_NAME = "session_id";
 
 	@Inject
 	SimilarityProcessingService similarityProcessingService;
 
 	/**
 	 * Submit an XML document for processing with specific element names.
-	 * 
+	 *
 	 * @param xmlContent The XML content to process
 	 * @param elements      A space-separated string of element names to extract text
 	 *                   from (e.g., "p li div")
@@ -37,86 +45,56 @@ public class SimilarityResource {
 	@POST
 	@Consumes(MediaType.APPLICATION_XML)
 	@Produces(MediaType.APPLICATION_JSON)
-	public Response processXmlWithXPath(String xmlContent, @QueryParam("elements") @DefaultValue("p") String elements) {
+	public Response apiSimilarity(String xmlContent, @QueryParam("elements") @DefaultValue("p") String elements) {
+		// We assume parameter elements is encoded, so we decode it
 		try {
-			// Always URL decode the element names as we assume it's encoded
-			if (elements != null) {
-				elements = java.net.URLDecoder.decode(elements, "UTF-8");
-				LOG.debug("Decoded element names: " + elements);
-				// Validate that each element name starts with a letter or '_', and contains
-				// only
-				// letters, digits, '-', or '_'. Multiple elements can be separated by spaces.
-				if (!elements.matches("^[a-zA-Z_][a-zA-Z0-9_-]*(\\s+[a-zA-Z_][a-zA-Z0-9_-]*)*$")) {
-					throw new IllegalArgumentException(elements);
-				}
-			}
-			return processXml(xmlContent, elements);
-		} catch (UnsupportedEncodingException e) {
-			LOG.error("Error decoding element names: " + elements, e);
+			elements = java.net.URLDecoder.decode(elements, StandardCharsets.UTF_8);
+		}
+		catch (Exception e) {
+			LOG.error("Error decoding element names", e);
 			return Response.status(Response.Status.BAD_REQUEST)
-					.entity(new ApiResponse("Error processing request.",
-							"Error decoding element names: " + e.getMessage(),
-							null))
-					.build();
-		} catch (IllegalArgumentException e) {
-			LOG.error("Validation error for elements parameter: " + elements, e);
-			return Response.status(Response.Status.BAD_REQUEST)
-					.entity(new ApiResponse("Error processing request.",
-							"Invalid elements names: " + elements + " " + e.getMessage(),
-							null))
+					.entity(new ApiResponse("Error processing request.", "URLDecoder.decode threw: " + e.getMessage(), null))
 					.build();
 		}
-	}
+		// We validate parameter elements
+		if (!elements.matches("^[a-zA-Z_][a-zA-Z0-9_-]*(\\s+[a-zA-Z_][a-zA-Z0-9_-]*)*$")) {
+			LOG.error("Validation error for elements parameter: " + elements);
+			return Response.status(Response.Status.BAD_REQUEST)
+					.entity(new ApiResponse("Elements parameter validation failed.", "Elements parameter should be a space separated string of valid XML elements." , null))
+					.build();
+		}
+		// We check if xmlContent is null or empty
+		if (xmlContent == null) {
+			LOG.warn("Received no xmlContent in request body");
+			return Response.status(Response.Status.BAD_REQUEST)
+					.entity(new ApiResponse("Error processing request.", "xmlContent was not provided in request body.", null))
+					.build();
+		}
+		if (xmlContent.trim().isEmpty()) {
+			LOG.warn("xmlContent in request body was the empty string");
+			return Response.status(Response.Status.BAD_REQUEST)
+					// TODO: Add a more specific error message, what is invalid about the XML?
+					.entity(new ApiResponse("Error processing request.", "XML content is empty or invalid", null))
+					.build();
+		}
+		return createSimilarityGroups(xmlContent, elements);
+    }
 
 	/**
 	 * Internal method to process XML with optional element names.
+	 * xmlContent and elementNames are assumed to be validated beforehand.
 	 */
-	private Response processXml(String xmlContent, String elementNames) {
+	private Response createSimilarityGroups(String xmlContent, String elementNames) {
 		try {
-			LOG.info("Received XML document for processing"
-					+ (elementNames != null ? " with element names: " + elementNames : ""));
-
-			if (xmlContent == null || xmlContent.trim().isEmpty()) {
-				LOG.warn("Received empty XML content");
-				return Response.status(Response.Status.BAD_REQUEST)
-						// TODO: Add a more specific error message, what is invalid about the XML?
-						.entity(new ApiResponse("Error processing request.", "XML content is empty or invalid", null))
-						.build();
-			}
-
-			// Validate XML before processing
-			try {
-				// Create a DocumentBuilderFactory
-				javax.xml.parsers.DocumentBuilderFactory factory = javax.xml.parsers.DocumentBuilderFactory
-						.newInstance();
-				// Create a DocumentBuilder
-				javax.xml.parsers.DocumentBuilder builder = factory.newDocumentBuilder();
-				// Parse the XML
-				builder.parse(new java.io.ByteArrayInputStream(xmlContent.getBytes()));
-			} catch (Exception e) {
-				LOG.warn("Invalid XML content: " + e.getMessage());
-				return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
-						// TODO: Add a more specific error message, what type of validation failed?
-						.entity(new ApiResponse("Error processing request.", "Invalid XML: " + e.getMessage(), null))
-						.build();
-			}
-
-			// Start async xml processing and get a session ID
-			String sessionId = similarityProcessingService.startAsyncProcessing(xmlContent, elementNames);
-
-			// Create session cookie
-			NewCookie sessionCookie = new NewCookie.Builder(SESSION_COOKIE_NAME)
-					.value(sessionId)
-					.path("/")
-					.httpOnly(true)
-					.build();
+			// Then start async xml processing and get a session ID
+			NewCookie sessionCookie = similarityProcessingService.startAsyncProcessing(xmlContent, elementNames);
 
 			// Return 202 Accepted with session ID in both cookie and body
 			return Response.status(Response.Status.ACCEPTED)
 					.cookie(sessionCookie)
 					.entity(new ApiResponse(
 							"Processing started. Results will be available for this session.",
-							sessionId))
+							sessionCookie.getValue()))
 					.build();
 
 		} catch (Exception e) {
@@ -137,14 +115,14 @@ public class SimilarityResource {
 	@GET
 	@Path("/results")
 	@Produces(MediaType.APPLICATION_JSON)
-	public Response getSimilarityResults(@CookieParam(SESSION_COOKIE_NAME) Cookie sessionCookie) {
+	public Response getSimilarityResults(@CookieParam(SimilarityProcessingService.SESSION_COOKIE_NAME) Cookie sessionCookie) {
 		try {
 			LOG.info("Received request for similarity results");
 
 			if (sessionCookie == null) {
 				LOG.warn("Session cookie missing");
 				return Response.status(Response.Status.BAD_REQUEST)
-						.entity(new ApiResponse("Session cookie missing or invalid.", null))
+						.entity(new ApiResponse(null,"Session cookie missing or invalid.", null))
 						.build();
 			}
 
@@ -154,10 +132,11 @@ public class SimilarityResource {
 			org.acme.semsim.model.SessionData.ProcessingStatus status = similarityProcessingService
 					.getProcessingStatus(sessionId);
 
+			// If no session found, return 404 Not Found
 			if (status == null) {
 				LOG.info("No session found for ID: " + sessionId);
 				return Response.status(Response.Status.NOT_FOUND)
-						.entity(new ApiResponse("No results found for this session.", null))
+						.entity(new ApiResponse(null,"No results found for this session.",null))
 						.build();
 			}
 
@@ -169,7 +148,7 @@ public class SimilarityResource {
 						.build();
 			}
 
-			// If error occurred during processing
+			// If error occurred during processing, return 500 Internal Server Error
 			if (status == org.acme.semsim.model.SessionData.ProcessingStatus.ERROR) {
 				LOG.warn("Processing error for session: " + sessionId);
 				return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
